helm-old/business-logic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: business-logic
  name: business-logic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: business-logic
  strategy: {}
  template:
    metadata:
      labels:
        app: business-logic
    spec:
      containers:
        # Pull image from local registry
      - image: localhost:5001/django-app
        name: django-app
        resources: {}
        ports:
          - name: http-port
            containerPort: 8000
            protocol: TCP
status: {}
