helm-old/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jenkins
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  strategy: {}
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        # Pull image from local registry
      - image: localhost:5001/custom-jenkins
        name: custom-jenkins
        resources: {}
        ports:
          - name: http-port
            containerPort: 8080
            protocol: TCP
          - name: jnlp-port
            containerPort: 50000
        volumeMounts:
          - name: jenkins-home
            mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-home
          emptyDir: {}
status: {}
