helm-old/business-logic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: business-logic
spec:
  type: ClusterIP
  ports:
    - name: http-port
      protocol: TCP
      # Port 8080 is internal to the kubernetes cluster and can be used when one application wants to communicate
      # with another application using business-logic:8080
      port: 8080

      # This is the port exposed within the pod (different from container port) 
      targetPort: 8000
  selector:
    app: business-logic
