helm-old/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: NodePort
  ports:
    - name: http-port
      protocol: TCP
      # Port 8008 is internal to the kubernetes cluster and can be used when one application wants to communicate
      # with another application using jenkins:8080
      port: 8008

      # This is the port exposed within the pod (different from container port) 
      targetPort: 8080

      # Node port 30200 makes the service accessible from outside the cluster using http://<node ip>:30200
      nodePort: 30200
  selector:
    app: jenkins
